# wordcount-rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/tests/: word.txt
tests/: line.rs
tests/utils/: mod.rs
