[package]
name = "wordcount"
version = "0.1.0"
authors = ["Fumiya Fujinaka <uzuna.kf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license="MIT"
description=""
readme="README.md"
repository="https://github.com/uzuna/wordcount"
categories=["command-line-utilities"]
keywords = ["example", "frequency", "text"]

[badge]
# github-actions?

[dependencies]
regex="1.0"